<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/device_id"/>
    <EditText
        android:id="@+id/et_device_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_device_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_device_id"
        android:autofillHints="name"
        />
    <Button
        android:id="@+id/btn_check_id"
        app:layout_constraintTop_toBottomOf="@id/et_device_id"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Check Id"/>

    <Button
        android:id="@+id/btn_set_timer_hidup"
        app:layout_constraintTop_toBottomOf="@id/btn_check_id"
        app:layout_constraintEnd_toStartOf="@id/btn_set_timer_mati"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_timer_hidup"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btn_set_timer_mati"
        app:layout_constraintTop_toBottomOf="@id/btn_check_id"
        app:layout_constraintStart_toEndOf="@id/btn_set_timer_hidup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/set_timer_mati"/>


    <TextView
        android:id="@+id/tv_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sw_sensor"
        app:layout_constraintTop_toBottomOf="@id/btn_set_timer_hidup"
        android:layout_marginTop="10dp"/>

    <Switch
        android:id="@+id/sw_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_sensor"
        app:layout_constraintTop_toTopOf="@id/tv_sensor"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_status_lampu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_lampu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sensor"
        app:layout_constraintTop_toBottomOf="@id/tv_sensor"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/tv_sensor"/>

    <Switch
        android:id="@+id/sw_status_lampu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/tv_status_lampu"
        app:layout_constraintEnd_toEndOf="@id/sw_sensor"
        app:layout_constraintStart_toStartOf="@id/sw_sensor"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_loglist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_status_lampu"
        android:layout_marginTop="35dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxHeight="200dp"
        app:layout_constraintTop_toBottomOf="@id/tv_loglist"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="20dp"
        tools:listitem="@layout/layout_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>